styles/styles.css
/* ... */
.subscribe__form input::-webkit-input-placeholder {
  color: rgba(0, 0, 0, 0.6)
}

.subscribe__form input::-moz-placeholder {
  color: rgba(0, 0, 0, 0.6)
}

.subscribe__form input:-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.6)
}

.subscribe__form input::-ms-input-placeholder {
  color: rgba(0, 0, 0, 0.6)
}

.subscribe__form input::placeholder {
  color: rgba(0, 0, 0, 0.6)
}

.inner-subscribe input {
  background: #F2F2F2;
  border-color: #F2F2F2;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.footer__hotline {
  font-size: 40px;
  line-height: 40px;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all .2s ease-in-out;
  -o-transition: all .2s ease-in-out;
  transition: all .2s ease-in-out;
}

.footer__button svg {
  vertical-align: middle;
}

.hero {
  color: #000000;
  background-color: rgba(131, 179, 211, 0.5);
  background-image: url("../images/background/hero_banner_1200x485.jpg");
  background-size: cover;
  background-position: center center;
}

.hero__divider {
  background: url("../images/index/divider.png") no-repeat bottom center;
  text-align: center;
}

.hero__image {
  margin: 51px 0 78px 0;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.intro {
  text-align: center;
  padding: 69px 270px 90px 270px;
  background-color: #fff;

}

.advantages {
  background-color: #fff;
}

.subscribe {
  background-color: rgba(131, 179, 211, 0.5);
  background-image: url("../images/background/subscribe_bg_1200x415.jpg");
  background-size: cover;
  background-position: center center;
  color: #fff;
  text-align: center;
  padding: 96px 258px 104px 258px;
}

.inner-header {
  color: #fff;
  background-color: rgba(131, 179, 211, 0.5);
  background-image: url("../images/background/catalog_banner_1200x412.jpg");
  background-size: cover;
  background-position: center center;
  padding:35px 70px 62px 70px;
}

.advantages__list--conditions .advantages__item:before {
  background-position: 50%;
  background-repeat: no-repeat;
  background-size: contain;
  content: "";
  display: inline-block;
  width: 75px;
  height: 72px;
  margin-bottom: 28px;
}

.advantages__item--house:before {
  background-image: url("../images/icons/icon_house.svg");
}

.advantages__item--food:before {
  background-image: url("../images/icons/icon_food.svg");
}

.advantages__item--souvenir:before {
  background-image: url("../images/icons/icon_souvenir.svg");
}

.advantages__item:nth-child(odd){
  background-color: rgba(131, 179, 211, 0.12);
}

.catalog-products {
  background-color: #fff;
  padding: 50px 70px 60px 70px;
}

.advantages__item:nth-child(odd) {
  background-color: rgba(131, 179, 211, 0.2);
}

.advantages__item:nth-child(even) {
  background-color: rgba(131, 179, 211, 0.12);
}

.breadcrumbs__item svg {
  vertical-align: middle;
}

.breadcrumbs__item:not(:last-child):after {
  content: '';
  background-image: url("../images/icons/icon_arrow.svg");
  display: inline-block;
  background-repeat: no-repeat;
  background-size: contain;
  width: 8px;
  height: 11px;
  margin-left: 6px;
  margin-right: 10px;
}
.advantages__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0;
}

.advantages__item {
  width: 33.333333%;
  text-align: center;
}

.advantages__item--large {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.advantages__list--conditions .advantages__item {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  padding: 80px 85px;
}

.advantages__list--conditions .advantages__item:nth-child(odd) {
  background-color: rgba(131, 179, 211, 0.12);
}

.advantages__list--conditions .advantages__item:nth-child(even) {
  background-color: #fff;
}

.search-hotels {
  text-align: center;
  padding: 96px 304px;
  background-color: #fff;
}

.footer {
  padding: 46px 70px 30px 70px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.footer__social-list {
  margin: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 5px 0;
}

.footer__social-item {
  min-width: 47px;
  min-height: 20px;
  text-align: center;
}

.catalog-filter {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.catalog-products__filter {
  display: -ms-grid;
  display: grid;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 40px;
  -ms-grid-columns: 1fr 70px 292px 70px 160px;
  grid-template-columns: 1fr 292px 160px;
  -webkit-column-gap: 70px;
  -moz-column-gap: 70px;
  column-gap: 70px;
}

.catalog-products__button-container {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 8px 1fr 8px 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  -webkit-column-gap: 8px;
  -moz-column-gap: 8px;
  column-gap: 8px;

}

.product-list {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
  margin: 0;
  padding-bottom: 39px;
  margin-bottom: 39px;
  border-bottom: 1px solid #E6E6E6;
}

.product-card {
  border: 1px solid #E6E6E6;
  border-radius: 4px;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: 19px 150px 150px 19px;
  grid-template-columns: 19px 150px 150px 19px;
  -ms-grid-rows: 1fr 16px 21px 16px 36px 16px 37px;
  grid-template-rows: 1fr 21px 36px 37px;
  row-gap: 16px;
  padding: 19px 0;
}

.product-card > *:nth-child(1) {
  -ms-grid-row: 1;
  -ms-grid-column: 1;
}

.product-card > *:nth-child(2) {
  -ms-grid-row: 1;
  -ms-grid-column: 2;
}
/* ... */

